# Lambda-Cost-Analysis

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/api/: cors_decorator.py  get_analysis_report.py  historical_analysis_report.py  list_lambda_functions.py
backend/cloudfront/: auth.py
backend/step_function/: analysis_aggregator.py  analysis_generator.py  analysis_initializer.py
backend/tests/api/: test_get_analysis_report.py  test_historical_analysis_report.py  test_list_lambda_function.py
backend/tests/step_function/: test_analysis_aggregator.py  test_analysis_generator.py  test_analysis_initializer.py
backend/utils/: sf_utils.py
frontend/: .gitignore  DEVELOPMENT.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/: MultiSelect.jsx  StatisticsList.jsx
frontend/src/contexts/: AnalysisContext.jsx
frontend/src/data/: optionsData.js
infrastructure/: .dockerignore  Dockerfile  package-lock.json  package.json
infrastructure/lib/: cdn-auth.ts  cdn-distribution.ts  report-api-stack.ts  s3-website-stack.ts  step-function-analysis-stack.ts
src/backend/: __init__.py
src/backend/api/: app.py  (+4 more)
src/tests/: conftest.py
tests/: conftest.py
tests/api/: test_get_analysis_report.py  test_historical_analysis_report.py  test_list_lambda_function.py
tests/step_function/: test_analysis_aggregator.py  test_analysis_initializer.py
(+22 files in other folders)
