[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambda-cost-analysis"
version = "0.1.0"
description = "Automated AWS Lambda cost analysis and optimization tool"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[all]>=3.21.0",
    "boto3>=1.40.52",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "moto>=5.1.14",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "types-boto3>=1.40.52",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.numpydoc_validation]
checks = [
    "all",
    "!ES01",  # No extended summary
    "!SA01",  # No see also
    "!EX01",  # No examples
]

[tool.isort]
profile = "black"
line_length = 88
